--- a/requirements.txt
+++ b/requirements.txt
@@ -6,37 +6,59 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+docopt==0.6.2
 gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
+imageio==2.37.0
 Jinja2==3.1.5
+joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+lazy_loader==0.4
+llvmlite==0.44.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 narwhals==1.26.0
+networkx==3.4.2
+numba==0.61.0
 numpy==2.2.3
+opencv-python-headless==4.11.0.86
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
+pipreqs==0.4.13
+platformdirs==4.3.6
+pooch==1.8.2
 protobuf==5.29.3
 pyarrow==19.0.0
 pydeck==0.9.1
 Pygments==2.19.1
+PyMatting==1.1.13
 python-dateutil==2.9.0.post0
 pytz==2025.1
 referencing==0.36.2
+rembg==2.0.62
 requests==2.32.3
 rich==13.9.4
 rpds-py==0.22.3
+scikit-image==0.25.1
+scikit-learn==1.6.1
+scipy==1.15.1
+setuptools==75.8.0
 six==1.17.0
 smmap==5.0.2
 streamlit==1.42.0
 tenacity==9.0.0
+threadpoolctl==3.5.0
+tifffile==2025.1.10
 toml==0.10.2
 tornado==6.4.2
+tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 watchdog==6.0.0
+wheel==0.45.1
+yarg==0.1.10
